# AdventOfCode2025

aoc2025/: pyproject.toml
aoc2025/src/day_01/: day_01.py
aoc2025/src/day_02/: main.py
aoc2025/src/day_03/: main.py  review.md
aoc2025/src/day_04/: main.py
aoc2025/src/day_05/: main2.py
aoc2025/src/day_06/: main.py
aoc2025/src/day_09/: main.py
aoc2025/src/day_10/: main.py
aoc2025/src/day_11/: main.py
aoc2025/tests/: test_day_01.py  test_day_05.py  test_day_09.py
